removed unwanted comma from cardsArray and fixed card spacing on HTML

--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,9 @@
 
 
 .CardSection {
-    margin-left: 5%;
-    margin-top: 5%;
     display: flex;
+    flex-wrap: wrap;
+    margin-top: 5%;
     justify-content: center;
 }
 
@@ -35,4 +35,10 @@
 
 .hide {
     display: none;
+}
+
+.mySpacing {
+    display: flex;
+    justify-content: center;
+    margin-top: 3%;
 }
